# hyper_guard

./: .gitignore  README.md  pubspec.yaml
.gitcode/workflows/: release_gitcode.yml
.github/workflows/: release.yml
android/: gradle.properties
android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: behavior_monitor.cc  behavior_monitor.h  fake_data_provider.cc  fake_data_provider.h  jni_bridge.cc  sandbox_core.cc  sandbox_core.h
android/app/src/main/kotlin/xin/ctkqiang/hyper_guard/: DeviceUtil.kt  HyperGuardNative.kt  HyperGuardService.kt  InstallInterceptor.kt  MainActivity.kt
android/app/src/main/res/xml/: network_security_config.xml
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/theme/: app_theme.dart  theme_colors.dart
lib/data/models/: sandbox_app.dart  security_report.dart
lib/presentation/bloc/device/: device_bloc.dart  device_event.dart  device_state.dart
lib/presentation/bloc/report/: report_bloc.dart  report_event.dart  report_state.dart
lib/presentation/bloc/sandbox/: sandbox_bloc.dart  sandbox_event.dart  sandbox_state.dart
lib/presentation/screens/: home_screen.dart  report_screen.dart  sandbox_screen.dart  splash_screen.dart
lib/presentation/widgets/: hyper_app_bar.dart  hyper_button.dart  hyper_card.dart  nezha_app_bar.dart  nezha_button.dart  nezha_card.dart  report_chart.dart  sandbox_app_tile.dart  security_status_indicator.dart
lib/services/: device_service.dart  monitor_service.dart  sandbox_service.dart
(+3 files in other folders)
